# Docker-FastAPI

./: .dockerignore  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  api.py  cliente.ipynb  cliente.py  docker-compose.yaml  experimentando.ipynb  probando.ipynb  pyproject.toml
