[project]
name = "venv-docker-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Robledo",email = "robledo.11@hotmail.com"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "autogluon (>=1.2,<2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "ruff (>=0.11.5,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

